2006-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-parse-string): Revert 2006-02-03 change.
	(rfc2231-encode-string): Make param*=value always begin with LWSP.

2006-02-03  Andreas Seltenreich <uwi7@stud.uni-karlsruhe.de>

	* nnweb.el (nnweb-request-group): Avoid growing overview files.

2006-02-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-parse-string): Add missing semicolons to
	segmented lines of parameter value to cope with Thunderbird 1.5
	bug (cf. https://bugzilla.mozilla.org/show_bug.cgi?id=323318).
	Suggested by ARISAWA Akihiro <ari@mbf.ocn.ne.jp>.
	(rfc2231-encode-string): Don't make lines exceeding 76 column.

2006-02-01  Max Froumentin  <max@lapin-bleu.net>  (tiny change)

	* mml.el (mml-generate-mime-1): Correct the order of inline signed
	parts.

2006-01-31  Andreas Seltenreich <uwi7@stud.uni-karlsruhe.de>

	* nnweb.el (nnweb-group-alist): Use defvar instead of defvoo,
	there's only one active file for all servers.
	(nnweb-request-scan): Make sure nnweb-articles is initialized on
	solid groups.  Gnus might have used a FAST request to select the
	group.
	(nnweb-request-group, nnweb-google-parse-1): Don't keep nnweb-type
	and nnweb-search redundantly in the active file.
	(nnweb-request-list): Don't list bogus groups.  There can only be
	one.
	(nnweb-request-create-group): Don't use ARGS.
	(nnweb-possibly-change-server, nnweb-request-group): Remove some
	initialisations.  Let nnoo do the work.

2006-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-emacs-sources-extract): Say the part has been
	decoded.
	(mm-uu-diff-extract): Ditto.

	* mm-view.el (mm-display-inline-fontify): Get decoded part rightly.

2006-01-31  Kevin Ryde  <user42@zip.com.au>

	* mailcap.el (mailcap-viewer-passes-test): Don't put "(nil t)" into
	mailcap-viewer-test-cache when there's no 'test clause, since that
	will invert the meaning of a "nil" test previously determined by
	mailcap-mailcap-entry-passes-test.
