@@ -1,3 +1,10 @@
+2006-02-06  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* spam-report.el (spam-report-gmane-use-article-number): Improve
+	doc string.
+	(spam-report-gmane-internal): Check if a suitable header was found
+	in the article.
+
 2006-02-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* rfc2231.el (rfc2231-parse-string): Revert 2006-02-03 change.
